# internal/delivery/http/user_controller.go
@@ -80,3 +80,58 @@ func (c *UserController) GetCurrent(ctx *fiber.Ctx) error {
 		Data: response,
 	})
 }
+
+func (c *UserController) Update(ctx *fiber.Ctx) error {
+	tokenRequest := new(model.GetUserByTokenRequest)
+	// tangkap token dari header
+	result := ctx.GetReqHeaders()
+	tokenRequest.Token = result["Authorization"][0]
+
+	// ambil data form update
+	dataRequest := new(model.UpdateUserRequest)
+	err := ctx.BodyParser(dataRequest)
+	if err != nil {
+		c.Log.Warnf("Cannot parse data : %+v", err)
+		return err
+	}
+
+	response, err := c.UseCase.Update(ctx.Context(), dataRequest, tokenRequest)
+	if err != nil {
+		c.Log.Warnf("Failed to update user : %+v", err)
+		return err
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(model.ApiResponse[*model.UserResponse]{
+		Code: 200,
+		Status: "Success to update user data",
+		Data: response,
+	})
+}
+
+func (c *UserController) UpdatePassword(ctx *fiber.Ctx) error {
+	tokenRequest := new(model.GetUserByTokenRequest)
+	// tangkap token dari header
+	result := ctx.GetReqHeaders()
+	tokenRequest.Token = result["Authorization"][0]
+
+	// ambil data form update
+	dataRequest := new(model.UpdateUserPasswordRequest)
+	err := ctx.BodyParser(dataRequest)
+	if err != nil {
+		c.Log.Warnf("Cannot parse data : %+v", err)
+		return err
+	}
+
+	response, err := c.UseCase.UpdatePassword(ctx.Context(), dataRequest, tokenRequest)
+	if err != nil {
+		c.Log.Warnf("Failed to update user password : %+v", err)
+		return err
+	}
+
+	return ctx.Status(fiber.StatusOK).JSON(model.ApiResponse[bool]{
+		Code: 200,
+		Status: "Success to update user password",
+		Data: response,
+	})
+
+}
